--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -1,6 +1,6 @@
 $fontFamily-adventure: 'Advent Pro', sans-serif;
 $fontFamily-kanit: 'Kanit', sans-serif;
-
+$fontFamily-medivalSharp: 'MedievalSharp', cursive;
 body{
     font-family: 'Kanit', sans-serif;
 }
