--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -1,5 +1,4 @@
 .auth {
-    
     &__title {
         font-size: 61px;
         color: $color-green;
@@ -11,7 +10,7 @@
         -webkit-text-stroke: 2px black;
         text-shadow: 4px 4px $color-black;
         z-index: 4;
-    
+        margin-bottom: 20px;
     }
     &__container {
         display: flex;
@@ -21,26 +20,132 @@
         margin-right: auto;
     }
 
-    &__item{
+    &__item {
         width: 560px;
+        border-radius: 28px;
+        padding: 10px;
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(6px);
     }
-    &__itemTitle{
+    &__itemTitle {
         font-size: 50px;
         color: $color-blue;
         font-style: italic;
         font-weight: 900;
         letter-spacing: 1px;
         text-align: center;
-        padding-top: 30px;
+        padding-top: 7px;
+        margin-bottom: 13px;
         -webkit-text-stroke: 2px black;
         text-shadow: 4px 4px $color-black;
         z-index: 4;
     }
     &__form {
-        margin: 10px;
         width: 100%;
-        height: 102px;
-        border: 2px solid red;
-    
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__inputWrapper {
+        position: relative;
+        width: 100%;
+        height: 136px;
+        &::after {
+            content: "";
+            position: absolute;
+            display: block;
+            z-index: -1;
+            top: -118px;
+            left: 44px;
+            width: 336px;
+            height: 336px;
+            transform: rotate(45deg);
+            background-image: url("/images/form_sword.png");
+            background-repeat: no-repeat;
+            background-size: 100% 100%;
+        }
+
+        &-left {
+            &:after {
+                transform: rotate(225deg);
+                left: 181px;
+            }
+        }
+    }
+
+    &__submitWrapper {
+        position: relative;
+        margin: 10px auto;
+        width: 300px;
+        display: flex;
+        justify-content: space-between;
+        align-items: flex-end;
+        div {
+            z-index: 2;
+            width: 65px;
+            height: 65px;
+            background-image: url("/images/form_tower.png");
+            background-size: cover;
+        }
+        button {
+            position: absolute;
+            width: 260px;
+            left: 20px;
+            padding: 8px 0;
+            background: #b7c1ca;
+            border: none;
+            box-shadow: 40px 4px #96a1a8 inset, -40px 4px #96a1a8 inset;
+            font-size: 1.25rem;
+            color: #ffdba9;
+            text-shadow: 0.125rem 0.125rem #ffc473;
+            font-weight: 900;
+            letter-spacing: 0.125rem;
+            transition: 0.3s;
+            &:hover{
+                letter-spacing: 0.25rem;
+                box-shadow: 47px 4px #96a1a8 inset, -47px 4px #96a1a8 inset;
+                cursor: pointer;
+
+            }
+        }
+    }
+}
+.auth__inputWrapper {
+    position: relative;
+    label {
+        position: absolute;
+        z-index: 3;
+        font-size: 0;
+        top: 28px;
+        left: 119px;
+    }
+    span {
+        color: $color-blue;
+        font-size: 1.5rem;
+        display: block;
+        transform: translate(15px, -34px);
+        transition: 0.4s;
+    }
+    input {
+        height: 38px;
+        width: 270px;
+        transition: 0.4s;
+        background: none;
+        font-size: 1.5rem;
+        border: none;
+        border-bottom: 5px solid $color-gold;
+        outline: none;
+        color: #404040;
+        &::placeholder {
+            color: inherit;
+        }
+    }
+}
+.auth__inputWrapper-left {
+    label {
+        left: 168px;
+    }
+    input {
+        text-align: right;
     }
 }
