--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -145,9 +145,9 @@
 
 .login__invalidData {
     color: $color-red;
-    font-weight: bold;
+    font-weight: 600;
     letter-spacing: 0.063rem;
-    font-size: 1.25rem;
+    font-size: 17px;
     padding: 0.875rem 0px;
     display: block;
     text-align: center;
