--- a/sass/elements/signInForm/_signInForm.scss
+++ b/sass/elements/signInForm/_signInForm.scss
@@ -84,7 +84,7 @@
     &__submitWrapper {
         position: relative;
         margin: 10px auto;
-        width: 300px;
+        width: 377px;
         display: flex;
         justify-content: space-between;
         align-items: flex-end;
@@ -92,6 +92,8 @@
             border: none;
             background: none;
             text-shadow: 0.125rem 0.125rem #ffc473;
+            width: 100%;
+            height: 100%;
             color: #ffdba9;
             font-size: 1.25rem;
             font-weight: 900;
@@ -114,9 +116,9 @@
             display: flex;
             justify-content: center;
             position: absolute;
-            width: 260px;
+            width: 335px;
             padding: 5px 0;
-            left: 20px;
+            left: 21px;
             background: #b7c1ca;
             box-shadow: 40px 4px #96a1a8 inset, -40px 4px #96a1a8 inset;
             transition: 0.3s;
@@ -224,10 +226,14 @@
     &:hover{
         letter-spacing: 0.063rem;
         cursor: pointer;
+        text-decoration: underline;
+        text-decoration-color: #4e5a61;
     }
 }
 #auth-resetPassword{
    display: none;
+   height: 243px;
+   padding: 30px 0;
 }
 @keyframes an__auth--loading{
     100%{
