--- a/sass/settings/_colors.scss
+++ b/sass/settings/_colors.scss
@@ -8,3 +8,5 @@ $color-green: #70e000;
 $color-blue: #00bbf9;
 $color-black: #03071e;
 $color-gold: #ffcd00;
+$color-wood-light: #f4ca62;
+$color-wood-dark: #aa6615;
