--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,3 +9,4 @@ body{
 @import "./elements/game/general";
 @import "./elements/game/navMenu";
 @import "./elements/game/profile";
+@import "./elements/game/pets";
