--- a/sass/elements/game/_pets.scss
+++ b/sass/elements/game/_pets.scss
@@ -1,41 +1,125 @@
-.pets{
+.pets {
     background-image: url("/images/pets_background.jpg");
     display: flex;
     justify-content: space-evenly;
-    &__item{
+    align-items: center;
+    &__item {
+        position: relative;
         z-index: 3;
         width: 20%;
-        padding: 10px;
+        height: 570px;
+        padding: 14px;
         background: rgba(255, 255, 255, 0.5);
+        border-radius: 20px;
+        transition: 0.3s;
+        &:hover{
+            background: rgba(255, 255, 255, 0.7);
+            width: 21%;
+        }
     }
 
-    &__img{
+    &__img {
         width: 100%;
         height: auto;
         object-fit: cover;
     }
 
-    &__name{
+    &__name {
         padding: 0.313rem 0;
         text-align: center;
         border-radius: 8px;
         font-size: 2.375rem;
         margin-top: 10px;
-        &-cat{
+        &-cat {
             background: #f7c4db;
-            color: #c56cb7
+            color: #c56cb7;
         }
-        &-scorpion{
+        &-scorpion {
             background: #b77158;
             color: #3b4456;
         }
-        &-cheetah{
+        &-cheetah {
             background: #fbd476;
             color: #cca75e;
         }
-        &-dragon{
+        &-dragon {
             background: #f47a6e;
             color: #b4453f;
         }
+    }
+
+    &__cost {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-top: 0.813rem;
+        height: 2rem;
+        img {
+            width: auto;
+            height: 100%;
+            object-fit: cover;
+        }
+        strong {
+            display: block;
+            margin-left: 0.313rem;
+            font-weight: bold;
+            letter-spacing: 0.063rem;
+            font-size: 2.063rem;
+            color: $color-gold;
+            -webkit-text-stroke: 0.063rem $color-gray-dark;
+        }
+    }
+    &__benefits {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 0.813rem;
+    }
+
+    &__benefitsItem {
+        color: $color-green;
+        font-weight: bold;
+        word-spacing: 0.125rem;
+        -webkit-text-stroke: 0.063rem $color-gray-dark;
+        margin-top: 0.188rem;
+    }
+    &__buy {
+        width: 100%;
+        position: absolute;
+        bottom: 10px;
+        left: 0;
+        display: flex;
+        justify-content: center;
+        &-afford {
+                background: $color-green !important;
+                color: $color-white !important;
+        }
+        &-notAfford {
+                background: $color-error !important;
+                color: $color-white !important;
+        }
+        button {
+            display: block;
+            margin: 0 auto;
+            padding: 0.625rem;
+            font-size: 1.25rem;
+            border: none;
+            margin-top: 0.813rem;
+            border-radius: 9px;
+            background: $color-gold;
+            color: $color-gray-dark;
+            font-weight: 700;
+        }
+    }
+
+    &__timeLeft {
+        width: auto;
+        text-align: center;
+        text-decoration: underline;
+        text-decoration-color: #51ab97;
+        border-radius: 3px;
+        color: #51ab97;
+        font-weight: bold;
+        margin-top: 10px;
     }
 }
