general - structure for blacksmith

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@ body{
 @import "./elements/game/navMenu";
 @import "./elements/game/profile";
 @import "./elements/game/pets";
+@import "./elements/game/blacksmith";
