--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -4,3 +4,18 @@ $fontFamily-medivalSharp: 'MedievalSharp', cursive;
 body{
     font-family: 'Kanit', sans-serif;
 }
+.transparent{
+    &::after{
+    content: "";
+    z-index: 0;
+    position: absolute;
+    display: block;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(255, 255, 255, 0.3);
+    backdrop-filter: blur(3px);
+    top: 0;
+    left: 0; 
+    }
+ 
+}
