--- a/sass/elements/game/_blacksmith.scss
+++ b/sass/elements/game/_blacksmith.scss
@@ -12,11 +12,25 @@
         z-index: 2;
         border: 2px solid red;
     }
-    &__character {
-        background: red;
+    &__characterWrapper {
+        height: 40%;
+        display: flex;
+        justify-content: center;
+    }
+    &__characterImg{
+        width: auto;
+        height: 100%;
+        object-fit: cover;
     }
     &__shop{
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
     }
+    &__itemsList{
+        margin-bottom: 57px;
+    }
+
     &__shopRow{
         display: flex;
         justify-content: space-evenly;
@@ -26,10 +40,19 @@
         }
     }
     &__shopItem{
-        width: 223px;
-        height: 223px;
+        width: 170px;
+        height: 170px;
         
         background-image: url('/images/blacksmith_item_frame.png');
         background-size: 100% 100%;
+        padding: 30px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__weapon{
+        width: 66%;
+        height: auto;
+        object-fit: cover;
     }
 }
