--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,3 +8,5 @@
 @import "./elements/game/profile";
 @import "./elements/game/pets";
 @import "./elements/game/blacksmith";
+@import "./elements/game/wizard";
+@import "./elements/game/shop";
