--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,3 +10,4 @@
 @import "./elements/game/blacksmith";
 @import "./elements/game/wizard";
 @import "./elements/game/shop";
+@import "./elements/game/missions";
