--- a/sass/elements/game/_missions.scss
+++ b/sass/elements/game/_missions.scss
@@ -11,7 +11,7 @@
         grid-column: 1/2;
         grid-row: 1/1;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: flex-end;
         height: 100%;
     }
@@ -49,6 +49,33 @@
             cursor: pointer;
         }
     }
+    &__willingnessBar {
+        height: 90%;
+        width: 50px;
+        border: 5px solid $color-gold;
+        margin-bottom: 25px;
+        border-radius: 80px;
+        background: rgba(255, 255, 255, 0.5);
+        position: relative;
+        overflow: hidden;
+        margin-left: 10px;
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 100%;
+            height: 30%;
+            bottom: 0;
+
+            background: #11998e; /* fallback for old browsers */
+            background: -webkit-linear-gradient(to right, #38ef7d, #11998e); /* Chrome 10-25, Safari 5.1-6 */
+            background: linear-gradient(
+                to right,
+                #38ef7d,
+                #11998e
+            ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        }
+    }
 }
 
 .mission {
@@ -57,60 +84,75 @@
         width: 50%;
         object-fit: cover;
     }
-    &__informations{
-       height: 100%;
-       position: relative;
+    &__informations {
+        height: 100%;
+        position: relative;
     }
-    &__textWrapper{
-      position: relative;
-      height: 0%;
-      animation: 1s  showPapyrus forwards ease-in-out;
+    &__textWrapper {
+        position: relative;
+        height: 0%;
+        animation: 1s showPapyrus forwards ease-in-out;
     }
-    &__text{
+    &__text {
         width: 73%;
         height: 100%;
         margin: 0 auto;
-        clip-path: polygon(100% 100%, 95% 94%, 100% 92%, 100% 75%, 97% 71%, 100% 69%, 100% 35%, 96% 31%, 100% 26%, 100% 0%, 0% 0%, 0% 41%, 3% 44%, 0% 47%, 0% 100%);
+        clip-path: polygon(
+            100% 100%,
+            95% 94%,
+            100% 92%,
+            100% 75%,
+            97% 71%,
+            100% 69%,
+            100% 35%,
+            96% 31%,
+            100% 26%,
+            100% 0%,
+            0% 0%,
+            0% 41%,
+            3% 44%,
+            0% 47%,
+            0% 100%
+        );
         background: #ffeed2;
         box-shadow: -36px 0 #f7dab4 inset;
         padding: 0 41px;
         padding-top: 0.75rem;
         font-family: $fontFamily-medivalSharp;
     }
-    &__title{
-      
-       font-size: 2.313rem;
-       font-weight: bold;
+    &__title {
+        font-size: 2.313rem;
+        font-weight: bold;
     }
-    &__description{
+    &__description {
         font-size: 1.125rem;
         font-weight: bold;
         margin-top: 0.5rem;
     }
-    &__detailsWrapper{
-       margin-top: 0.625rem;
+    &__detailsWrapper {
+        margin-top: 0.625rem;
     }
 
-    &__detail{
+    &__detail {
         display: flex;
         align-items: center;
         font-size: 1.125rem;
         margin-top: 0.75rem;
     }
 
-    &__detailImg{
+    &__detailImg {
         width: 37px;
         height: auto;
         object-fit: cover;
     }
-    &__detailName{
-      margin-left: 0.5rem;
-      font-weight: 900;
+    &__detailName {
+        margin-left: 0.5rem;
+        font-weight: 900;
     }
-    &__detailResult{
+    &__detailResult {
         margin-left: 0.5rem;
     }
-    &__acceptBtn{
+    &__acceptBtn {
         background: transparent;
         font-size: 1.375rem;
         border: none;
@@ -122,14 +164,14 @@
         border-radius: 0.625rem;
         margin-top: 0.625rem;
         transition: 0.2s;
-        &:hover{
+        &:hover {
             cursor: pointer;
             letter-spacing: 0.065rem;
         }
     }
 }
-@keyframes showPapyrus{
-    100%{
+@keyframes showPapyrus {
+    100% {
         height: 90%;
     }
 }
@@ -141,9 +183,9 @@
     background-color: #c48958;
     border-radius: 25px;
     position: relative;
-    box-shadow: -115px 0  #b27a49 inset;
+    box-shadow: -115px 0 #b27a49 inset;
     z-index: 2;
-    &-bottom{
+    &-bottom {
         position: absolute;
         bottom: -13px;
         left: 0;
@@ -161,9 +203,8 @@
         border-radius: 15px 0 0 15px;
         left: 21px;
     }
-    &::after{
-        border-radius:0 15px 15px 0;
+    &::after {
+        border-radius: 0 15px 15px 0;
         right: 21px;
     }
 }
-
