styles - guard - part of view

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,3 +11,4 @@
 @import "./elements/game/wizard";
 @import "./elements/game/shop";
 @import "./elements/game/missions";
+@import "./elements/game/guard";
