styles - guard - raw view

--- a/sass/settings/_all.scss
+++ b/sass/settings/_all.scss
@@ -3,6 +3,7 @@ $fontFamily-kanit: 'Kanit', sans-serif;
 $fontFamily-medivalSharp: 'MedievalSharp', cursive;
 body{
     font-family: 'Kanit', sans-serif;
+    color: $color-black;
 }
 .transparent{
     &::after{
