--- a/sass/elements/game/_guard.scss
+++ b/sass/elements/game/_guard.scss
@@ -1,38 +1,41 @@
-.guard{
+.guard {
     height: 100%;
-    background-image: url('/images/background_guard.jpg');
+    background-image: url("/images/background_guard.jpg");
     background-size: 100% 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     position: relative;
-    &__item{
+    &__item {
         display: flex;
         width: 50%;
         padding: 10px;
+     
         z-index: 1;
         background: rgba(255, 255, 255, 0.5);
         border-radius: 20px;
         transition: 0.3s;
         position: relative;
         backdrop-filter: blur(2px);
+        transition: 0.3s;
+        &:hover{
+            backdrop-filter: blur(4px);
+        }
     }
-    &__kingWrapper{
-      width: 35%;
-
-    }
-
-    &__infoWrapper{
-    width: 65%;
- 
+    &__kingWrapper {
+        width: 35%;
     }
 
-    &__king{
+    &__infoWrapper {
+        width: 65%;
+    }
+
+    &__king {
         width: 100%;
         height: auto;
         object-fit: cover;
     }
-    &__title{
+    &__title {
         font-size: 44px;
         letter-spacing: 0.25rem;
         word-spacing: 0.188rem;
@@ -41,95 +44,154 @@
         color: $color-gold;
         -webkit-text-stroke: 1px $color-black;
     }
-    &__text{
+    &__text {
         font-size: 1.25rem;
         word-spacing: 0.125rem;
         line-height: 1.25rem;
     }
-    &__inputWrapper{
-       height: 80px;
-       width: 100%;
-       background: red;
-       display: flex;
-       flex-direction: column;
-       justify-content: center;
-       align-items: center;
-       position: relative;
-    }
-    &__inputSliderValue{
-     position: relative;
+    &__award{
+        display: flex;
+        align-items: center;
+        margin-top: 41px;
     }
 
-    &__inputField{
-        display: flex;
-        justify-content: center;
-        position: absolute;
-        height: 3px;
-        background: #ddd;
-        width: 100%;
-        border-radius: 3px;
-        input{
-            appearance: none;
-        }
+    &__awardIcon{
+        width: 2.25rem;
+        height: auto;
+        object-fit: cover;
     }
-    &__inputValue{
+    &__awardAmount{
+      margin-left: 0.625rem;
+      font-size: 1.125rem;
+      font-weight: 700;
+      word-spacing: 0.375rem;
+      text-transform: uppercase;
+      letter-spacing: 0.125rem;
+    }
+    &__inputValue {
         position: absolute;
-        &-left{
+        &-left {
             left: -30px;
         }
-        &-right{
-          right: -30px;
+        &-right {
+            right: -30px;
         }
     }
-    .range{
+    &__acceptBtnWrapper{
+        display: flex;
+        justify-content: flex-end;
+    }
+    &__acceptBtn{
+        font-size: 1.375rem;
+        border: none;
+        outline: none;
+        position: relative;
+        font-weight: 900;
+        background: $color-gold;
+        color: $color-black;
+        padding: 0.313rem 0.75rem;
+        border-radius: 0.625rem;
+        margin-top: 0.625rem;
+        transition: 0.2s;
+        &:hover {
+            cursor: pointer;
+            letter-spacing: 0.065rem;
+        }
+    }
+    .range {
+        margin-top: 8px;
         height: 80px;
         width: 100%;
-        background: white;
     }
-    .field{
+    .field {
         position: relative;
         display: flex;
         align-items: center;
         justify-content: center;
         height: 100%;
-        input{
+        input {
             position: relative;
+
             appearance: none;
             width: 100%;
-            background: #ddd;
+            border-radius: 40px;
+            height: 30px;
+            background: #e5646e;
             border: none;
-            &::-webkit-slider-thumb{
+            &::-webkit-slider-thumb {
+                position: relative;
                 appearance: none;
-                width: 20px;
-                height: 20px;
-                background: red;
-                
+                width: 50px;
+                height: 50px;
+                background-image: url("/images/guard_input_range__progress_icon.png");
+                background-size: 100% 100%;
+                transform: translateY(-1px);
+                z-index: 3;
+            }
+            &::after {
+                content: "";
+                display: block;
+                height: 100%;
+                background: $color-gold;
+                left: 0;
+                position: absolute;
+                border-radius: 40px;
+                z-index: 2;
             }
         }
     }
-    .value{
+    .value {
         position: absolute;
-
     }
-    .left{
+    .left {
         left: -43px;
     }
-    .right{
+    .right {
         right: -43px;
     }
-    .sliderValue{
+    .sliderValue {
         position: relative;
         width: 100%;
         display: flex;
         justify-content: center;
-        span{
+        margin-bottom: 42px;
+        span {
             position: absolute;
             display: block;
-            width: 20px;
-            height: 20px;
-            background: red;
+            text-align: center;
+            width: 2.813rem;
+            height: 2.813rem;
             left: 0%;
+            line-height: 2.5rem;
+            font-weight: bold;
+            &::after{
+                content: '';
+                position: absolute;
+                z-index: -1;
+               
+                transform: rotate(45deg);
+                top: 0;
+                display: block;
+                text-align: center;
+                width: 45px;
+                height: 45px;
+                
+                background: #f5f2ec;
+                border-top-left-radius: 50%;
+                border-top-right-radius: 50%;
+                border-bottom-left-radius: 50%;
+                border: 3px solid #53433f;
 
+            }
+        }
+    }
+}
+
+// classes responsible for progress bar
+@for $i from 1 through 10 {
+    .field__progressBar-#{$i} {
+        &::after {
+            width: ($i * 10%) - 3% !important;
         }
     }
 }
