styles - friends - sort form

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,3 +12,7 @@
 @import "./elements/game/shop";
 @import "./elements/game/missions";
 @import "./elements/game/guard";
+@import "./elements/game/searchFriends";
+@import "./elements/game/friends";
+@import "./elements/game/inbox";
+@import "./elements/game/settings";
