--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -67,11 +67,11 @@
         width: 314px;
         padding: 13px;
         box-sizing: border-box;
-        height: 254px;
         border-radius: 10px;
         background: $color-gray-dark;
         border: 3px solid #e80054;
         z-index: 3;
+
         &::after {
             content: "";
             position: absolute;
@@ -80,11 +80,23 @@
             height: 1.938rem;
             transform: rotate(45deg);
             background: #e80054;
-            top: -19px;
-            right: -19px;
-            border: 2px solid $color-gray-dark;
+            top: -20px;
+            right: -20px;
+            border: 3px solid $color-gray-dark;
             z-index: 2;
         }
+
+        &-filter{
+            right: 27px;
+            border: 3px solid #ffdc00;
+            width: 378px;
+            &::after{
+                background: #ffdc00;
+            }
+        }
+
+
+     
     }
 }
 
