logic - friends - toggling form - sort and filter

--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -61,6 +61,7 @@
         }
     }
     &__settingsForm {
+        display: none;
         position: absolute;
         top: 81px;
         right: 110px;
