--- a/sass/elements/game/_friends.scss
+++ b/sass/elements/game/_friends.scss
@@ -87,22 +87,96 @@
             z-index: 2;
         }
 
-        &-filter{
+        &-filter {
             right: 27px;
             border: 3px solid #ffdc00;
             width: 378px;
-            &::after{
+            &::after {
                 background: #ffdc00;
             }
         }
-
-
-     
+    }
+    &__list {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 22px;
+    }
+    &__item{
+        width: 25%;
+        border-radius: 10px;
+        padding: 10px 0;
+        display: flex;
+        justify-content: center;
     }
 }
 
+.friend{
+    width: 80%;
+    background: rgba(255,255,255,0.4);
+    position: relative;
+    backdrop-filter: blur(3px);
+    border-radius: 15px;
+    padding: 10px 0;
+    transition: 0.2s;
+    &:hover{
+        backdrop-filter: blur(5px);
+        cursor: pointer;
+    }
+  &__portraitWrapper{
+      z-index: 3;
+      width: 100%;
+      height: 303px;
+      background-image: url('/images/friends_frame_friend.png');
+      background-size: 113% 100%;
+      background-position: center;
+      background-repeat: no-repeat;
+      display: flex;
+      justify-content: center;
+      align-items: flex-end;
+  }
+  &__portrait{
+      width: 50%;
+      margin-bottom: 44px;
+      height: auto;
+      object-fit: cover;
+  }
+  &__name{
+      margin-top: 6px;
+      text-align: center;
+      background: $color-gold;
+      font-size: 1.375rem;
+      padding: 0.375rem 0;
+      color: $color-white;
+  }
+  &__levelWrapper{
+      display: flex;
+      align-items: center;
+      margin-top: 0.5rem;
+  }
+  &__levelIcon{
+      width: 2.625rem;
+      margin-left: 0.563rem;
+      margin-right: 0.625rem;
+      height: auto;
+      object-fit: cover;
+  }
+  &__level{
+      font-size: 20px;
+      font-weight: 900;
+      word-spacing: 0.375rem;
+  }
+}
+
+
+
+
+
+
+
+
+
 .friends__checkboxWrapper {
-    height: 50px;
+    height: 3.125rem;
     color: $color-white;
     &:hover {
         text-decoration: underline;
@@ -116,10 +190,10 @@
     }
     span {
         display: block;
-        width: 28px;
-        height: 28px;
+        width: 1.75rem;
+        height: 1.75rem;
         border-radius: 20px;
-        border: 4px solid $color-white;
+        border: 0.25rem solid $color-white;
         position: absolute;
         left: 0;
     }
