--- a/sass/elements/game/_inbox.scss
+++ b/sass/elements/game/_inbox.scss
@@ -8,7 +8,7 @@
         width: 50%;
         height: 100%;
         &:first-child {
-            background: rgba(255, 255, 255, 0.5);
+            background: rgba(255, 255, 255, 0.2);
             border-right: 6px solid #343a40;
         }
     }
@@ -69,7 +69,8 @@
             border-right: 6px solid #3a86ff;
             border-top: 6px solid #3a86ff;
         }
-        &:hover::after,  &:hover::before{
+        &:hover::after,
+        &:hover::before {
             width: 100%;
             cursor: pointer;
         }
@@ -105,5 +106,102 @@
         font-size: 1.25rem;
         border-left: 4px solid $color-gray-dark;
         overflow: hidden;
+    }
+}
+//#3a86ff
+.mail {
+    height: 100%;
+    background: $color-white;
+    backdrop-filter: blur(12px);
+    padding: 25px 0;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    &__friendHeaderWrapper {
+        height: 456px;
+        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        border-bottom: 10px solid #3a86ff;
+        width: 90%;
+    }
+    &__friendCircle {
+        width: 370px;
+        height: 370px;
+        border-radius: 50%;
+        background: #3a86ff;
+        transform: translate(45px, -10px);
+        border: 6px solid $color-gold;
+    }
+    &__friendPortait {
+        position: absolute;
+        
+        height: 320px;
+        width: auto;
+        object-fit: cover;
+        z-index: 2;
+        transform: translate(-85px, 26px);
+    }
+    &__friendTitle {
+        
+        font-weight: 700;
+        font-size: 1.875rem;
+        margin-top: 3px;
+        text-align: center;
+        letter-spacing: 0.125rem;
+        word-spacing: 0.188rem;
+        span {
+            font-weight: 900;
+            -webkit-text-stroke: 1px $color-gold;
+        }
+    }
+    &__FriendActionBar {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+    }
+    &__friendBtn {
+        margin-top: 23px;
+        width: 45%;
+        font-size: 1.875rem;
+        border: none;
+        padding: 0.313rem 0;
+        color: $color-white;
+        font-weight: 700;
+        letter-spacing: 0.063rem;
+        transition: 0.2s;
+        border-radius: 5px;
+        &:hover {
+            cursor: pointer;
+            letter-spacing: 0.188rem;
+        }
+        &-accept {
+            background: $color-green;
+        }
+        &-reject {
+            background: $color-red;
+        }
+    }
+    &__friendBottomWrapper {
+        position: absolute;
+        overflow: hidden;
+        bottom: 0;
+        span{
+            position: absolute;
+            display: block;
+            width: 100%;
+            height: 10px;
+            background: $color-white;
+            box-shadow: 0 5px 19px 36px $color-white;
+            z-index: 3;
+        }
+        img {
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
     }
 }
