style - account - raw view

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,4 +15,4 @@
 @import "./elements/game/searchFriends";
 @import "./elements/game/friends";
 @import "./elements/game/inbox";
-@import "./elements/game/settings";
+@import "./elements/game/account";
