--- a/sass/settings/_colors.scss
+++ b/sass/settings/_colors.scss
@@ -5,7 +5,7 @@ $color-purple: #7400b8;
 $color-red: #e63946;
 $color-error: #e5383b;
 $color-green: #70e000;
-$color-blue: #00bbf9;
+$color-blue: #3a86ff;
 $color-black: #03071e;
 $color-gold: #ffcd00;
 $color-wood-light: #f4ca62;
