--- a/sass/elements/game/_account.scss
+++ b/sass/elements/game/_account.scss
@@ -10,6 +10,7 @@
         background: rgba(255, 255, 255, 0.5);
         backdrop-filter: blur(2px);
         border-radius: 20px;
+
     }
     &__nick{
         font-size: 44px;
@@ -57,6 +58,10 @@
         font-family: $fontFamily-kanit;
         outline: none;
         box-sizing: border-box;
+
+        &::placeholder{
+            font-size: 1.188rem;
+        }
         &-email{
             &:focus{
                 border: 4px solid #5f98d1;
@@ -66,6 +71,27 @@
             &:focus{
                 border: 4px solid #7343dd;
             }
+        }
+    }
+    &__msg{
+        margin-top: 1rem;
+        
+        font-weight: 600;
+        padding: 5px 0;
+        font-size: 17px;
+        text-align: center;
+        letter-spacing: 0.125rem;
+        word-spacing: 0.125rem;
+        color: $color-white;
+        border-radius: 50px;
+        transform: scale(0%);
+        animation: 0.5s an__account_error forwards;
+        display: none;
+        &-error{
+            background: $color-error;
+        }
+        &-success{
+            background: $color-green;
         }
     }
     &__btn{
@@ -82,8 +108,15 @@
         border: none;
         &:hover{
             cursor: pointer;
+            color: $color-gold;
             border: 2px solid $color-gold;
             letter-spacing: 0.125rem;
         }
+    }
+}
+
+@keyframes an__account_error{
+    100%{
+        transform: scale(100%);
     }
 }
