--- a/sass/elements/game/_navMenu.scss
+++ b/sass/elements/game/_navMenu.scss
@@ -136,7 +136,8 @@
         }
         &-account {
             &::after {
-                background: #ff9f00;
+                background: #8f95e6;
+                
             }
         }
     }
