styles - blacksmith - view of item label

--- a/sass/settings/_colors.scss
+++ b/sass/settings/_colors.scss
@@ -10,3 +10,6 @@ $color-black: #03071e;
 $color-gold: #ffcd00;
 $color-wood-light: #f4ca62;
 $color-wood-dark: #aa6615;
+
+
+$color-item-blue: #00bbf9;
