--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -1,13 +1,33 @@
 .market {
     &__characterWrapper {
-        height: 40%;
+        height: 336px;
         display: flex;
         justify-content: center;
+        border: 3px solid red;
     }
     &__characterImg {
+        transition: 0.5s;
         width: auto;
         height: 100%;
         object-fit: cover;
+    }
+    &__character {
+        height: 100%;
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            width: 180px;
+            height: 50%;
+            background: $color-white;
+            transform: scale(0);
+            z-index: 2;
+            clip-path: polygon(100% 61%, 0 0, 0 33%);
+            top: 29px;
+            left: -24px;
+            animation: 1s 2s an__blacksmith_messageCloud forwards;
+        }
     }
     &__shop {
         display: flex;
@@ -44,12 +64,126 @@
             object-fit: cover;
         }
 
-        
         &-wizard {
-            img{
-              width: 45%;  
+            img {
+                width: 45%;
             }
-            
         }
+    }
+
+    &__itemInfoWrapper {
+        width: 360px;
+      
+    }
+    &__itemInfo {
+        box-sizing: border-box;
+        transition: 0.5s;
+        background: $color-white;
+        padding: 10px;
+        width: 100%;
+        max-height: 336px;
+        transform: scale(0%);
+        border-radius: 18px;
+        animation: 0.6s an__blacksmith_messageCloud forwards;
+        position: relative;
+        &::after {
+            content: "";
+            display: block;
+            position: absolute;
+            right: -197px;
+            top: 30px;
+            width: 200px;
+            height: 160px;
+            background: $color-white;
+            clip-path: polygon(98% 64%, 0 0, 0 36%);
+            transform: scale(0%);
+            animation: 0.6s an__blacksmith_messageCloud forwards;
+            z-index: 2;
+        }
+    }
+    &__itemTitle {
+        font-family: $fontFamily-medivalSharp;
+        font-weight: 900;
+        font-size: 1.75rem;
+        color: $color-black;
+        
+        text-align: center;
+        &-common{
+            text-shadow: 0 0 0.938rem $color-item-blue;
+        }
+        &-legendary {
+            font-style: italic;
+            color: $color-gold;
+            text-shadow: 0 0 0.938rem $color-gold;
+        }
+    }
+    &__itemDsc {
+        margin-top: 0.625rem;
+        font-size: 1.063rem;
+
+        font-style: italic;
+        text-align: center;
+    }
+    &__itemRarity {
+        display: block;
+        font-size: 20px;
+        font-weight: bold;
+        text-align: center;
+        border-top: 2px solid $color-gray-dark;
+        margin-top: 10px;
+        letter-spacing: 0.125rem;
+        text-transform: uppercase;
+        &-common {
+            -webkit-text-stroke: 0.063rem $color-item-blue;
+        }
+        &-legendary {
+            -webkit-text-stroke: 0.063rem $color-gold;
+        }
+    }
+    &__itemStats {
+        width: 100%;
+        border-top: 2px solid $color-gray-dark;
+        margin-top: 10px;
+        td {
+            padding-bottom: 0.375rem;
+            font-weight: bold;
+            &:last-child strong{
+                color: $color-green;
+            }
+        }
+    }
+
+    &__itemPriceWrapper {
+        height: 30px;
+        background: $color-gray-dark;
+        border-radius: 18px;
+        margin-top: 4px;
+        padding: 3px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    &__itemPriceIcon {
+        height: 90%;
+        width: auto;
+        object-fit: cover;
+    }
+    &__itemPrice {
+        margin-left: 0.438rem;
+        font-weight: 900;
+        color: $color-gold;
+        font-size: 1.438rem;
+        letter-spacing: 0.063rem;
+    }
+}
+
+@keyframes an__blacksmith_messageCloud {
+    100% {
+        transform: none;
+    }
+}
+@keyframes an__blacksmith_messagePoint {
+    100% {
+        right: -200px;
     }
 }
