--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -148,8 +148,12 @@
         td {
             padding-bottom: 0.375rem;
             font-weight: bold;
-            &:last-child strong{
+        
+            .better{
                 color: $color-green;
+            }
+            .worse{
+                color: $color-error;
             }
         }
     }
@@ -176,6 +180,7 @@
         font-size: 1.438rem;
         letter-spacing: 0.063rem;
     }
+   
 }
 
 @keyframes an__blacksmith_messageCloud {
