--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -165,8 +165,8 @@
         height: 30px;
         background: $color-gray-dark;
         border-radius: 18px;
-        margin-top: 4px;
-        padding: 3px;
+        margin-top: 0.25rem;
+        padding: 0.188rem;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -183,7 +183,22 @@
         font-size: 1.438rem;
         letter-spacing: 0.063rem;
     }
+    .afford-no &__itemPrice{
+        
+        text-shadow: 0.188rem 0.188rem 0.125rem $color-error;
+    }
+    .afford-yes &__itemPrice{
+      
+        text-shadow: 0.188rem 0.188rem 0.125rem $color-green;
+    }
+    .afford-no &__itemPriceWrapper{
+        box-shadow: 0 0 0.313rem $color-error;
+    }
+    .afford-yes &__itemPriceWrapper{
+        box-shadow: 0 0 0.313rem $color-green;
+    }
 }
+
 .dragging{
     width: 70%;
     height: 70%;
