--- a/sass/elements/game/_profile.scss
+++ b/sass/elements/game/_profile.scss
@@ -214,6 +214,10 @@
         justify-content: center;
         padding: 0.313rem 0;
         border-radius: 50px;
+        &-noAfford{
+            animation: 1s an__goldBar infinite alternate-reverse;
+        }
+        
     }
     &__goldIcon{
         height: 100%;
@@ -330,5 +334,10 @@
     }
     100% {
         transform: scale(100%);
+    }
+}
+@keyframes an__goldBar{
+    100% {
+        box-shadow: 0 0  0 40px $color-red inset;
     }
 }
