--- a/sass/elements/game/_shop.scss
+++ b/sass/elements/game/_shop.scss
@@ -57,7 +57,7 @@
         justify-content: center;
         align-items: center;
     }
-    &__slotWrapper{
+    &__slotWrapper {
         display: flex;
         justify-content: center;
         align-items: center;
@@ -84,7 +84,6 @@
 
     &__itemInfoWrapper {
         width: 360px;
-      
     }
     &__itemInfo {
         box-sizing: border-box;
@@ -116,9 +115,9 @@
         font-weight: 900;
         font-size: 1.75rem;
         color: $color-black;
-        
+
         text-align: center;
-        &-common{
+        &-common {
             text-shadow: 0 0 0.938rem $color-item-blue;
         }
         &-legendary {
@@ -157,11 +156,19 @@
         td {
             padding-bottom: 0.375rem;
             font-weight: bold;
-        
-            .better{
+
+            &:first-child{
+                letter-spacing: 0.125rem;
+            }
+            &:last-child {
+                text-align: end;
+                letter-spacing: 0.063rem;
+
+            }
+            .better {
                 color: $color-green;
             }
-            .worse{
+            .worse {
                 color: $color-error;
             }
         }
@@ -189,23 +196,21 @@
         font-size: 1.438rem;
         letter-spacing: 0.063rem;
     }
-    .afford-no &__itemPrice{
-        
+    .afford-no &__itemPrice {
         text-shadow: 0.188rem 0.188rem 0.125rem $color-error;
     }
-    .afford-yes &__itemPrice{
-      
+    .afford-yes &__itemPrice {
         text-shadow: 0.188rem 0.188rem 0.125rem $color-green;
     }
-    .afford-no &__itemPriceWrapper{
+    .afford-no &__itemPriceWrapper {
         box-shadow: 0 0 0.313rem $color-error;
     }
-    .afford-yes &__itemPriceWrapper{
+    .afford-yes &__itemPriceWrapper {
         box-shadow: 0 0 0.313rem $color-green;
     }
 }
 
-.dragging{
+.dragging {
     width: 70%;
     height: 70%;
 }
